# efficient-sw

efficient-server-cpp/: CMakeLists.txt  README.md  epoll_server  meson.build  shell.nix
efficient-server-cpp/proto/: walk1nodes100-2.pbf  walk1nodes3-2.pbf
efficient-server-cpp/src/: kdtree.cpp  kdtree.h  main.cpp  meson.build
efficient-server-cpp/src/epoll/: binder.cpp  binder.h  fd.cpp  fd.h  instance.cpp  instance.h  server.cpp  server.h
efficient-server-cpp/src/proto/: messages.pb.cc  messages.pb.h
esw-eff-server-java/: pom.xml
esw-eff-server-java/src/main/java/server/: Application.java  EfficientServer.java  KDTree.java  Logger.java
esw-eff-server-java/src/main/resources/: logging.properties
esw-eff-server-java/src/test/java/: EfficientServerTest.java  KdTreeTest.java  TestClient.java
esw-eff-server-java/src/test/resources/proto/: schema.proto  walk2nodes6.pbf
hw1/: ellipse.diff.txt
hw2/: Book1.xlsx  MatrixMultiplicationBenchmark.java  benchmark_template_v2.doc  bmt_martin.doc  gen_results.py  graphs.xlsx  measurements.json  ratioCalc.py  report.doc  results.json
hw3/: README  definitions.hpp  hw3-graph.xlsx  list.cpp  list.hpp  main.cpp  meson.build  shell.nix
hw3/data/: res-rcu.txt  res-rw.txt
hw4/dw/: .editorconfig  CMakeLists.txt  EpollEchoHandler.cc  EpollInstance.hh  EpollServerHandler.cc  EpollTimer.hh  shell.nix  t.sh
hw4/epoll_server/: EpollEchoHandler.cc  EpollEchoHandler.hh  EpollEntry.cc  EpollServerHandler.cc  EpollStdIn.hh  EpollTimer.cc  README  main.cc  meson.build
hw4/epoll_server_s/: EpollEchoHandler.hh  EpollInstance.cc  EpollStdIn.cc
hw4/print/: EpollEntry.hh  EpollInstance.cc  EpollServerHandler.cc  EpollServerHandler.hh  EpollTimer.cc  LICENSE  meson.build  t.sh
hw5/multiobjective_shortest_path/: mosp.diff.txt  pom.xml
hw6/src/main/java/cz/cvut/fel/esw/shortestpath/: Main.java
hw6/src/main/java/cz/cvut/fel/esw/shortestpath/search/: SearchState.java  (+1 more)
hw7/nonblock-set/: pom.xml
(+7 files in other folders)
