project(epoll_server)
cmake_minimum_required(VERSION 2.8)
find_library(PROTOBUF_LIBRARY protobuf HINTS /usr/lib/x86_64-linux-gnu)
target_link_libraries(${PROTOBUF_LIBRARY})
include_directories(${PROTOBUF_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -O2")
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST} src/epoll/instance.cpp src/epoll/server.cpp src/kdtree.cpp src/epoll/fd.cpp src/epoll/binder.cpp src/main.cpp)
